# AI--TOURISIM-AGENT

./: .env.enhanced  .env.example  .env.template  .gitignore  .gitignore_optimized  AI_AGENTS_IN_DEPTH_ANALYSIS.md  AI_Travel_Platform_Presentation.md  API_KEYS_SUMMARY.md  API_KEY_RESTRICTIONS_GUIDE.md  CHANGELOG.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  COMMIT_PUSH_CONFIRMATION.md  COMPLETE_GITHUB_SETUP.txt  COMPLETE_SETUP_SUMMARY.md  CURRENT_DATABASE_ANALYSIS.md  ENHANCED_AI_INTEGRATION_GUIDE.md  ENHANCED_BUDGET_SYSTEM.md  ENHANCED_FEATURES_GUIDE.md  ENHANCED_FEATURES_SUMMARY.md  ESSENTIAL_DYNAMIC_TABLES_GUIDE.md  FINAL_CLEANUP_REPORT.md  FINAL_DATABASE_TABLE_SUMMARY.md  FINAL_DOCUMENTATION_SUMMARY.md  GITHUB_SETUP_COMPLETE.md  GITHUB_UPLOAD_COMMANDS.txt  GOOGLE_APIS_INTEGRATION_COMPLETE.md  GOOGLE_APIS_SETUP_GUIDE.md  INVESTOR_PRESENTATION_READY.md  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW_AND_METHODOLOGY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_FINAL.md  QUICK_RESTAURANT_SOLUTION.md  README.md  README_Arabic.md  README_COMPLETE.md  README_GITHUB_OPTIMIZED.md  (+103 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-cd.yml
booking_system/: booking_manager.py
config/: .env.example  __init__.py  enhanced_features.json
crewai/agents/: __init__.py  travel_agents.py
crewai/crews/: __init__.py  travel_crews.py
crewai/tasks/: travel_tasks.py
crewai/tools/: __init__.py  travel_tools.py
database/: DATABASE_SETUP_GUIDE.md  __init__.py  check_database.py  db_inspector.py  setup_database.py  test_database.py
database/scripts/: compatible_database_population.py  database_population_script.py
demos/: enhanced_intelligence_demo.py  quick_demo.py
docs/: AGENT_COMPARISON_ANALYSIS.md  AGENT_STREAMLINING_COMPLETION.md  CLEANUP_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FINAL_UPLOAD_COMMANDS.txt  GITHUB_STRATEGY.md  INTEGRATION_COMPLETE.md  RELEASE_NOTES.md  SCHEMA_OVERVIEW.md  SECURITY.md  requirements.txt
enhanced_features/: dynamic_activity_database.py  enhanced_travel_agent.py  intelligent_itinerary_engine.py  travel_agent_enhanced.py
local_crewai/: __init__.py
local_crewai/agents/: __init__.py
local_crewai/tasks/: travel_tasks.py
local_crewai/tools/: __init__.py  travel_tools.py
local_crewai/workflows/: __init__.py
scripts/: minimal_data_addition.py
src/: __init__.py
src/agents/: __init__.py
src/agents/local_crewai/agents/: travel_agents.py
src/agents/local_crewai/tasks/: __init__.py
src/agents/local_crewai/tools/: enhanced_tools.py
src/agents/local_crewai/workflows/: travel_workflows.py
src/ai_agents/: __init__.py  enhanced_itinerary_generator.py  platform_integrations.py
src/ai_agents/crewai/crews/: travel_crews.py
src/ai_agents/crewai/tasks/: travel_tasks.py
src/ai_agents/crewai/tools/: __init__.py  booking_tools.py  enhanced_tools.py  (+2 more)
src/ai_agents/enhanced_features/: enhanced_tools.py  enhanced_travel_agent.py
src/ai_agents/integration/: __init__.py  advanced_ai_integrator.py
src/ai_agents/memory/: __init__.py  conversation_memory.py
src/ai_agents/psychology/: __init__.py  enhanced_psychology_analyst.py
src/ai_agents/validation/: __init__.py  real_time_validator.py
src/api_integration/: __init__.py
src/api_integration/openai/: openai_service.py
src/api_integration/stripe/: stripe_service.py
src/api_integration/supabase/: supabase_service.py
src/api_integration/tavily/: tavily_service.py
src/booking_system/: __init__.py  booking_manager.py  enhanced_payment_processor.py  fix_bookings_table.py  verify_bookings_table.py
src/core/: __init__.py  config.py  config_example.py  enhanced_travel_platform.py  main_app.py  platform_core.py
src/database/: __init__.py  db_updater.py
src/database/schemas/: enhanced_database_schema.sql
src/services/: __init__.py
src/ui/: __init__.py
src/utils/: __init__.py
tests/: README.md  quick_health_check.py  run_all_tests.py  test_complete_system.py  test_individual_modules.py
tests/integration/: test_ai_agents.py
ui/: streamlit_ui.py
(+3 files in other folders)
